Using list-col and list-vertical on all services page to ensure proper wrapping of list items

--- a/common/list/_lists.scss
+++ b/common/list/_lists.scss
@@ -73,6 +73,16 @@ ul.list-vertical[class*="list-col"] {
 	}
 }
 
+ul.list-vertical.lst-spcd-2 > li {
+	margin-bottom: 0;
+	padding-bottom: 20px;
+}
+
+ul.list-vertical.lst-spcd > li {
+	margin-bottom: 0;
+	padding-bottom: 10px;
+}
+
 /*
  * this code is fully compatible with the equivalent CSS
  * in the wet-boew code here: https://github.com/wet-boew/wet-boew/blob/master/src/base/lists/_base.scss
